# numVmV2

./: CMakeLists.txt  README.md  ScratchDocument.txt  Test.txt  Testprograms.txt  byteCode  byteCode.nvm  main.cpp
Information/: ByteCode description.txt
Machine/: Command.cpp  Command.h  Executer.cpp  Executer.h  Executor.cpp  Executor.h  Function.cpp  Function.h  Machine.cpp  Machine.h  Stackframe.cpp
Machine/DelegateTable/: Arithmetic.cpp  Arithmetic.h  Binary.cpp  Binary.h  Comparison.cpp  Comparison.h  Delegate.cpp  Delegate.h  FunctionOperations.cpp  FunctionOperations.h  Implementations.cpp  Implementations.h  Memory.cpp  Memory.h  System.cpp  System.h
Machine/Stack/: Function.cpp  Function.h  Stackframe.cpp  Stackframe.h
Misc/: CommandInformation.cpp  CommandInformation.h  ConstMakr.h
Reading/: Command.cpp  Command.h  Lexer.cpp  Lexer.h  ReadingModule.cpp  ReadingModule.h
types/: Reference.cpp  Reference.h
